...
            "value": "Cancel"
          }
        },
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "キャンセル"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "Cancel"
...
            "value": "Register"
          }
        },
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "登録する"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "Register"
...
            "value": "Done"
          }
        },
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "完了"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "Done"
...
            "value": "Start"
          }
        },
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "はじめる"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "Start"
...
            "value": "Write your first words"
          }
        },
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "最初の言葉を書いてみましょう"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "Write your first words"
...
            "value": "Settings"
          }
        },
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "設定"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "Settings"
...
            "value": "Home"
          }
        },
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "ホームへ"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "Home"
...
            "value": "Library"
          }
        },
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "一覧"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "Library"
...
